cmake_minimum_required(VERSION 3.18)
set(CMAKE_CXX_STANDARD 14)
project(MFSHS)
set(${CMAKE_CXX_FLAGS} "-lfftw3f")
aux_source_directory(. CXX)
aux_source_directory(../utility ext_CXX)
add_library(${PROJECT_NAME} ${CXX} ${ext_CXX})
#add_executable(${PROJECT_NAME} ${CXX} ${ext_CXX})
target_include_directories(${PROJECT_NAME} PUBLIC /home/ywm/cpp/fftw_install/fftw-3.3.9/api)
target_include_directories(${PROJECT_NAME} PUBLIC ../utility)
target_link_directories(${PROJECT_NAME} PUBLIC /usr/local/lib/)
target_link_libraries(${PROJECT_NAME} PUBLIC libfftw3.a)