cmake_minimum_required(VERSION 3.18)
set(CMAKE_CXX_STANDARD 14)
project(MusicLoader)
aux_source_directory(../MusicLoader CXX)
#include_directories(/usr/local/ffmpeg/include)
add_library(${PROJECT_NAME} ${CXX})
#add_executable(MusicLoader ${CXX})
target_include_directories(${PROJECT_NAME} PUBLIC /usr/local/ffmpeg/include)
target_link_directories(${PROJECT_NAME} PUBLIC /usr/local/ffmpeg/lib)
target_link_libraries(${PROJECT_NAME} avcodec avdevice avfilter avformat avutil)