cmake_minimum_required(VERSION 3.18)
project(SpecTransform)
set(CMAKE_CXX_STANDARD 14)
set(FFTW3_DIR /home/ywm/cpp/fftw_install/fftw-3.3.9)

file(GLOB INC include/*)
file(GLOB SRC src/*)
message(@@@@@@@${INC})
message(@@@@@@@${SRC})
message(@@@@@@@${FFTW3_DIR}/api)
#add_executable(${PROJECT_NAME} ${INC} ${SRC})
add_library(${PROJECT_NAME} ${INC} ${SRC})
target_include_directories(${PROJECT_NAME} PUBLIC include)
#target_include_directories(${PROJECT_NAME} PRIVATE ${TORCH_INCLUDE_DIRS})
target_include_directories(${PROJECT_NAME} PUBLIC /home/ywm/cpp/fftw_install/fftw-3.3.9/api)
target_link_directories(${PROJECT_NAME} PUBLIC /usr/local/lib/)
target_link_libraries(${PROJECT_NAME} PUBLIC libfftw3.a)